--- a/Personal_website/Personal_website.html
+++ b/Personal_website/Personal_website.html
@@ -100,7 +100,7 @@ Continuing as a second year engineering student, I am constantly gaining experie
 </i></h3></div></p><br><br><br><br><br>
 
 
-<p><center><a href="My_Favourites.html"><button class="button button1">CLICK HERE TO KNOW MORE ABOUT MY INTERESTS</button></a></p></center>
+<p><center><a href="html\My_Favourites.html"><button class="button button1">CLICK HERE TO KNOW MORE ABOUT MY INTERESTS</button></a></p></center>
 
 <br><br><br>
 <p><center>
