--- a/Personal_website/html/My_Favourites.html
+++ b/Personal_website/html/My_Favourites.html
@@ -4,12 +4,12 @@
 <title>
 My_Interests
 </title>
-<link rel="icon" type="image/x-icon" href="C:\Users\User\Desktop\COLLEGE\UI DESIGN\Personal_website\Images\key.png">
+<link rel="icon" type="image/x-icon" href="Images\key.png">
 </head>
 
 <style>
 body {
-  background-image: url('Images/brown.jpg');
+  background-image: url('Images\brown.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
@@ -141,9 +141,9 @@ Mythology based</i></h1></p></div>
 </ol></div></center>
 <br><br><br>
 
-<p><center><a href="C:\Users\User\Desktop\COLLEGE\UI DESIGN\Personal_website\Personal_website.html"><button class="button button1">CLICK HERE TO GO BACK</button></a></p></center><br>
+<p><center><a href="Personal_website.html"><button class="button button1">CLICK HERE TO GO BACK</button></a></p></center><br>
 
-<center><img src="C:\Users\User\Desktop\COLLEGE\UI DESIGN\Personal_website\Images\giphy (1).gif" style="width:800px;height:400px;border-radius:500px "></center><br><br>
+<center><img src="Images\giphy (1).gif" style="width:800px;height:400px;border-radius:500px "></center><br><br>
 
 
 </body>
