--- a/Personal_website/Personal_website.html
+++ b/Personal_website/Personal_website.html
@@ -100,7 +100,7 @@ Continuing as a second year engineering student, I am constantly gaining experie
 </i></h3></div></p><br><br><br><br><br>
 
 
-<p><center><a href="html/My_Favourites.html"><button class="button button1">CLICK HERE TO KNOW MORE ABOUT MY INTERESTS</button></a></p></center>
+<p><center><a href="html\My_Favourites.html"><button class="button button1">CLICK HERE TO KNOW MORE ABOUT MY INTERESTS</button></a></p></center>
 
 <br><br><br>
 <p><center>
@@ -109,9 +109,9 @@ Continuing as a second year engineering student, I am constantly gaining experie
 <br><br><br>
 
 <center><div class="gen"><i style="font-family:'Papyrus';font-size:30px"><u>My Socials</u></i><br><br>
-<img src="Images/icons8-instagram-50.png" style="width:30px;height:30px;border-radius:500px ">
+<img src="Images\icons8-instagram-50.png" style="width:30px;height:30px;border-radius:500px ">
 <a href="https://www.instagram.com/ash_dawayy/"><i><h3>Instagram</i></h3></a>
-<img src="Images/github.png" style="width:30px;height:30px;border-radius:500px ">
+<img src="Images\github.png" style="width:30px;height:30px;border-radius:500px ">
 <a href="https://github.com/aISHWARYAgs2004"><i><h3>Github</i></h3></a></center>
 <br><br>
 
