--- a/Personal_website/html/My_Favourites.html
+++ b/Personal_website/html/My_Favourites.html
@@ -4,7 +4,7 @@
 <title>
 My_Interests
 </title>
-<link rel="icon" type="image/x-icon" href="Images/key.png">
+<link rel="icon" type="image/x-icon" href="Images\key.png">
 </head>
 
 <style>
@@ -141,7 +141,7 @@ Mythology based</i></h1></p></div>
 </ol></div></center>
 <br><br><br>
 
-<p><center><a href="html/Personal_website.html"><button class="button button1">CLICK HERE TO GO BACK</button></a></p></center><br>
+<p><center><a href="html\Personal_website.html"><button class="button button1">CLICK HERE TO GO BACK</button></a></p></center><br>
 
 <center><img src="Images\giphy (1).gif" style="width:800px;height:400px;border-radius:500px "></center><br><br>
 
