--- a/Personal_website/html/My_Favourites.html
+++ b/Personal_website/html/My_Favourites.html
@@ -9,7 +9,7 @@ My_Interests
 
 <style>
 body {
-  background-image: url('Images/brown.jpg');
+  background-image: url('Images\brown.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
@@ -141,7 +141,7 @@ Mythology based</i></h1></p></div>
 </ol></div></center>
 <br><br><br>
 
-<p><center><a href="html\Personal_website.html"><button class="button button1">CLICK HERE TO GO BACK</button></a></p></center><br>
+<p><center><a href="html\Personal_website/Personal_website.html"><button class="button button1">CLICK HERE TO GO BACK</button></a></p></center><br>
 
 <center><img src="Images\giphy (1).gif" style="width:800px;height:400px;border-radius:500px "></center><br><br>
 
