--- a/Personal_website/My_Favourites.html
+++ b/Personal_website/My_Favourites.html
@@ -4,7 +4,7 @@
 <title>
 My_Interests
 </title>
-<link rel="icon" type="image/x-icon" href="C:\Users\User\Desktop\COLLEGE\UI DESIGN\Personal_website\Images\key.png">
+<link rel="icon" type="image/x-icon" href="Images\key.png">
 </head>
 
 <style>
@@ -141,7 +141,7 @@ Mythology based</i></h1></p></div>
 </ol></div></center>
 <br><br><br>
 
-<p><center><a href="Personal_website\Personal_website.html"><button class="button button1">CLICK HERE TO GO BACK</button></a></p></center><br>
+<p><center><a href="Personal_website.html"><button class="button button1">CLICK HERE TO GO BACK</button></a></p></center><br>
 
 <center><img src="Images\giph.gif" style="width:800px;height:400px;border-radius:500px "></center><br><br>
 
