--- a/Personal_website/html/My_Favourites.html
+++ b/Personal_website/html/My_Favourites.html
@@ -9,7 +9,7 @@ My_Interests
 
 <style>
 body {
-  background-image: url('Images/brown.jpg');
+  background-image: url('https://img.freepik.com/premium-vector/cute-brown-aesthetic-abstract-minimal-background-perfect-wallpaper-backdrop-postcard-background_565280-444.jpg?w=2000');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
