--- a/ASSIGNMENTS/register.html
+++ b/ASSIGNMENTS/register.html
@@ -166,7 +166,7 @@ input:checked + .slider:before {
 </p>
 
 
-<p><a href="notice.html"><button>REGISTER</button></a></p></center>
+<p><a href="html\notice.html"><button>REGISTER</button></a></p></center>
 
 </form>
 <html>
