--- a/ASSIGNMENTS/register.html
+++ b/ASSIGNMENTS/register.html
@@ -89,7 +89,7 @@ Registration
 <div class="gen">
 <form method="get" enctype="application/x-www-form-urlencoded" action="/html/codes/html_form_handler.cfm">
 
-<fieldset>
+<fieldset style = "width: 940px; margin: auto;">
 <legend>Details</legend>
 <p>
 <label>Name
@@ -138,7 +138,7 @@ Registration
 	
 <br>
 
-<fieldset>
+<fieldset style = "width: 940px; margin: auto;">
 <legend>Events</legend>
 <p><label> <input type="radio" name="events" required value="Code wars"> Code wars </label></p>
 <p><label> <input type="radio" name="events" required value="Poly code glot"> Poly code glot </label></p>
@@ -149,7 +149,7 @@ Registration
 
 <br>
 
-<fieldset>
+<fieldset style = "width: 940px; margin: auto;">
 <legend>Workshops</legend>
 <p><label> <input type="checkbox" name="ws" value="Data Science"> Data Science </label></p>
 <p><label> <input type="checkbox" name="ws" value="Python"> Python </label></p>
@@ -181,7 +181,7 @@ Registration
 </p>
 
 
-<p><a href="html\notice.html"><button>REGISTER</button></a></p></center>
+<p><a href="notice.html"><button>REGISTER</button></a></p></center>
 
 </div>
 </form>
