--- a/ASSIGNMENTS/notice.html
+++ b/ASSIGNMENTS/notice.html
@@ -12,6 +12,6 @@
 }
 </style>
 <body>
-<center><divclass="gen2"><h1 style="color:teal;">Registration Successful!</div></h1></center>
+  <center><divclass="gen2"><h1><b>Registration Successful!</b></div></h1></center>
 </body>
 </html>
