--- a/ASSIGNMENTS/register.html
+++ b/ASSIGNMENTS/register.html
@@ -181,7 +181,7 @@ Registration
 </p>
 
 
-<p><a href="html\notice.html"><button>REGISTER</button></a></p></center>
+<p><a href="notice.html"><button>REGISTER</button></a></p></center>
 
 </div>
 </form>
