--- a/ASSIGNMENTS/index.html
+++ b/ASSIGNMENTS/index.html
@@ -128,7 +128,7 @@ Anokha, the national engineering techfest of Amrita School of Engineering, Coimb
 <br>
 <br>
 
-<p><center><a href=""><button class="button button1">REGISTER HERE!</button></a></p></center>
+<p><center><a href="html\register.html"><button class="button button1">REGISTER HERE!</button></a></p></center>
 
 
 <p><center>
