--- a/Anokha 2023/register.html
+++ b/Anokha 2023/register.html
@@ -176,7 +176,7 @@ input:checked + .slider:before {
 </p>
 
 
-<p><a href="C:\Users\User\Desktop\COLLEGE\UI DESIGN\Notice.html"><button>REGISTER</button></a></p></center>
+<p><a href="html\notice.html"><button>REGISTER</button></a></p></center>
 
 </div>
 </form>
