--- a/Anokha_2023/index.html
+++ b/Anokha_2023/index.html
@@ -167,7 +167,7 @@ var x = setInterval(function() {
 </script></div>
 <br><br>
 
-<center><a href="html\My_Favourites.html"><button class="button button1">REGISTER HERE!</button></a></center>
+<center><a href="next\notice.html"><button class="button button1">REGISTER HERE!</button></a></center>
 
 <br><br>
 <p><center>
