--- a/Anokha_2023/notice.html
+++ b/Anokha_2023/notice.html
@@ -35,4 +35,4 @@ ___________________________________________________________</h2>
 </center>
 </header>
 
-<center><a href="..\index.html"><button class="button button1">Back Home</button></a></center>
+<center><a href="index.html"><button class="button button1">Back Home</button></a></center>
