--- a/Anokha_2023/register.html
+++ b/Anokha_2023/register.html
@@ -208,7 +208,7 @@ Anokha Registeration 2023
 
 <br>
 
-<a href="..\notice.html"><button class="button button1">SUBMIT RESPONSE</button></a>
+<a href="notice.html"><button class="button button1">SUBMIT RESPONSE</button></a>
 
 </div>
 </form>
