--- a/Anokha_2023/contact.html
+++ b/Anokha_2023/contact.html
@@ -71,7 +71,7 @@ univhq@amrita.edu<br>
 
 </i></h3></div></p></center><br>
 
-<center><a href="index.html"><button class="button button1">Back Home</button></a></center><br>
+<center><a href="anokha.html"><button class="button button1">Back Home</button></a></center><br>
 
 </body>
 <footer style="text-align:center;color:White;background-color:Teal;font-size:20px;"><div class="gen3"><i>
