--- a/Anokha_2023/register.html
+++ b/Anokha_2023/register.html
@@ -231,7 +231,7 @@ Anokha Registeration 2023
 <br>
 <br>
 
-<center><a href="index.html"><button class="button button1">Back Home</button></a></center><br>
+<center><a href="anokha.html"><button class="button button1">Back Home</button></a></center><br>
 
 <footer style="text-align:center;color:White;background-color:Teal;font-size:20px;"><div class="gen3">
 ©Copyright**<br>
