--- a/anokha.html
+++ b/anokha.html
@@ -1,4 +1,13 @@
+<!--
+Authors:  Aishwarya GS
+Created Date:  17 Dec 2022
+Updated Date: 07 Jan 2023
+Base Template:  None
+Description: Anokha TechFest Homepage
+
 <html>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
 <title>
