--- a/Personal_website/personal_website.html
+++ b/Personal_website/personal_website.html
@@ -1,4 +1,14 @@
+<!--
+Authors:  Aishwarya GS
+Created Date:  14 Nov 2022
+Updated Date: 07 Jan 2023
+Base Template:  None
+Description: Personal Webiste Homepage
+-->
+
 <html>
+  
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
 <title>
