Update and rename consumer.html to Pharma_supply_chain_consumer.html

--- a/Pharma_supply_chain_consumer.html
+++ b/Pharma_supply_chain_consumer.html
@@ -1,4 +1,14 @@
+<!--
+Authors:  Aishwarya GS
+Created Date: 03 Jan 2023
+Updated Date: 07 Jan 2023
+Base Template:  None
+Description: Pharma supply chain - Consumer page
+-->
+
 <html>
+  
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
 <title>
