--- a/notice.html
+++ b/notice.html
@@ -11,10 +11,10 @@ Description: Anokha TechFest Notice page
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-<title>
-Confirmation
-</title>
-<link rel="icon" type="image/x-icon" href="https://img.icons8.com/external-flatart-icons-outline-flatarticons/512/external-laptop-devices-flatart-icons-outline-flatarticons-1.png">
+  <title>
+    Confirmation
+  </title>
+  <link rel="icon" type="image/x-icon" href="https://img.icons8.com/external-flatart-icons-outline-flatarticons/512/external-laptop-devices-flatart-icons-outline-flatarticons-1.png">
 </head>
 
 <style>
@@ -44,15 +44,19 @@ body {
 <br><br><br><br><br>
 
 <header style="color:White;font-size:30px;">
-<center>
-<h2 style="text-align:center;font-family:'Papyrus';color:Black;">
-___________________________________________________________<br><br>
-<emp>
-Registration Successful!
-</emp>
-<br>
-___________________________________________________________</h2>
-</center>
+  <center>
+    <h2 style="text-align:center;font-family:'Papyrus';color:Black;">
+      ___________________________________________________________<br><br>
+      <emp>
+        Registration Successful!
+      </emp>
+      <br>
+      ___________________________________________________________</h2>
+  </center>
 </header>
 
-<center><a href="anokha.html"><button class="button button1">Back Home</button></a></center>
+<center>
+  <a href="anokha.html">
+    <button class="button button1">Back Home</button>
+  </a>
+</center>
