--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,10 @@ Description: Anokha TechFest Contact page
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-<title>
-Contact
-</title>
-<link rel="icon" type="image/x-icon" href="https://img.icons8.com/ios/512/iphone.png">
+  <title>
+    Contact
+  </title>
+  <link rel="icon" type="image/x-icon" href="https://img.icons8.com/ios/512/iphone.png">
 </head>
 
 <style>
@@ -102,57 +102,71 @@ li a:hover {
 </ul>
 
 <header>
-<header style="color:White;background-color:Teal;font-size:30px;">
-<center>
-<h1 style="text-align:center;background-color:Teal;font-family:'Papyrus';color:White;"><i>
-Contact us
-</i></h1>
-</center></header>
+  <header style="color:White;background-color:Teal;font-size:30px;">
+    <center>
+      <h1 style="text-align:center;background-color:Teal;font-family:'Papyrus';color:White;">
+        <i>
+          Contact us
+        </i>
+      </h1>
+    </center>
+</header>
 <br>
 
 <body>
-<p><div class="gen3"><center>
-<h3 style="font-family:'Century Gothic';font-size:23px;"><div class="gen">
-
-<form method="get" enctype="application/x-www-form-urlencoded" action="/html/codes/html_form_handler.cfm">
-
+  
 <p>
-<label>Name
-<input type="text" name="student_name" placeholder="Firstname Lastname" id="name" onchange="validateName()" required>
-</label> 
-</p>
+  <div class="gen3">
+    <center>
+      <h3 style="font-family:'Century Gothic';font-size:23px;">
+        <div class="gen">
+
+          <form method="get" enctype="application/x-www-form-urlencoded" action="/html/codes/html_form_handler.cfm">
+
+          <p>
+            <label>Name
+              <input type="text" name="student_name" placeholder="Firstname Lastname" id="name" onchange="validateName()" required>
+            </label> 
+          </p>
 
 
-<p>
-<label>Email 
-<input type="email" name="email_address" placeholder="abc123@xyz.com" id="email" onchange="validateEmail()" required>
-</label>
-</p>
+          <p>
+            <label>Email 
+              <input type="email" name="email_address" placeholder="abc123@xyz.com" id="email" onchange="validateEmail()" required>
+            </label>
+          </p>
 
-<p>
-<label>Phone 
-<input type="tel" name="phone_number" id="phone" onchange="validatePhoneno()" required>
-</label>
-</p>
+         <p>
+           <label>Phone 
+             <input type="tel" name="phone_number" id="phone" onchange="validatePhoneno()" required>
+           </label>
+         </p>
 
-<p>
-<label style="font-size:20px">Concerns</label><br><br>
-<textarea name="message" rows="10" cols="70" required></textarea>
-</p>
+        <p>
+          <label style="font-size:20px">Concerns</label><br><br>
+          <textarea name="message" rows="10" cols="70" required></textarea>
+        </p>
 
-<i>
-<h2>Coimbatore</h2>
-Amrita Vishwa Vidyapeetham<br>
-Coimbatore Campus<br>
-Amritanagar<br>
-Coimbatore - 641 112<br>
-Tamilnadu, India<br><br>
-univhq@amrita.edu<br>
-+91 (422) 2685 000<br><br>
+        <i>
+          <h2>Coimbatore</h2>
+            Amrita Vishwa Vidyapeetham<br>
+            Coimbatore Campus<br>
+            Amritanagar<br>
+            Coimbatore - 641 112<br>
+            Tamilnadu, India<br><br>
+            univhq@amrita.edu<br>
+            +91 (422) 2685 000<br><br>
+        
 
-<a href="notice2.html"><button class="button button1">Submit Response</button></a>
+            <a href="notice2.html">
+              <button class="button button1">Submit Response</button>
+            </a>
 
-</i></h3></div></p></center><br>
+        </i>
+      </h3>
+    </div>
+  </p>
+</center><br>
 
 </body>
 
