--- a/register.html
+++ b/register.html
@@ -224,9 +224,9 @@ input:checked + .slider:before {
 
 <br>
 
-		<a href="notice.html"><button class="button button1">Submit Response</button></a>
+<a href="notice.html"><button class="button button1">Submit Response</button>
 
-	</div>
+</div>
 </form>
 
 <br>
