--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@ li a:hover {
             Tamilnadu, India<br><br>
             univhq@amrita.edu<br>
             +91 (422) 2685 000<br><br>
-        
+          </form> 
 
             <a href="notice2.html">
               <button class="button button1">Submit Response</button>
