--- a/register.html
+++ b/register.html
@@ -228,7 +228,7 @@ input:checked + .slider:before {
 
 </form>
 
-	<a href="notice.html"><button class="button button1">Submit Response</button>
+	<a href="notice.html"><input type="submit" class="button button1" value="Submit Response"></a>
 </div>
 <br>
 <br>
