--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@ li a:hover {
          </i>
            
 
-        <a href="notice.html"><input type="submit" class="button button1" value="Submit Response"></a>
+        <a href="notice2.html"><input type="submit" class="button button1" value="Submit Response"></a>
         </form>
 
         
